--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <div id="contentContainer">Information
-
-       <div class="name"><H3>Name</H3></div> 
-       <div class="roll"><H3>Roll No</H3></div> 
-        <div class="pass"><H3>pass</H3></div>
-       <div class="Year"><H3>Year</H3></div> 
+    <!-- <div id="contentContainer"> -->
+        <table>
+            <tr>
+              <th>Name</th>
+              <th>Roll no</th>
+              <th>pass</th>
+              <th>Year</th>
+            </tr>
+        </table>
+       <!-- <div class="name"><h3>Name</h3></div> 
+       <div class="roll"><h3>Roll No</h3></div> 
+        <div class="pass"><h3>pass</h3></div>
+       <div class="Year"><h3>Year</h3></div>  -->
     </div>
-    
+     <script type="module" src="script.js"></script>
 </body>
 </html>
