--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
     <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <!-- <div id="contentContainer"> -->
-        <table>
-            <tr>
-              <th>Name</th>
-              <th>Roll no</th>
-              <th>pass</th>
-              <th>Year</th>
-            </tr>
+    <div>
+        <table id="contentContainer">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>rollNo</th>
+                    <th>year</th>
+                    <th>pass</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Aniket</td>
+                    <td>48</td>
+                    <td>3</td>
+                    <td>true</td>
+                </tr>
+            </tbody>
         </table>
-       <!-- <div class="name"><h3>Name</h3></div> 
-       <div class="roll"><h3>Roll No</h3></div> 
-        <div class="pass"><h3>pass</h3></div>
-       <div class="Year"><h3>Year</h3></div>  -->
     </div>
      <script type="module" src="script.js"></script>
 </body>
